--- a/style.css
+++ b/style.css
@@ -18,10 +18,6 @@ p {
 
 header, footer {
     color: #48284A;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
 }
 
 header {
@@ -130,4 +126,15 @@ main.portfolio {
 .item-six {
     grid-row: 2;
     grid-column: 4;
+}
+
+a {
+    color: inherit;
+    margin: 0 30px;
+}
+
+nav {
+    display:flex;
+    justify-content: flex-end;
+    align-items: center;
 }
